test/parse/bad-crlf.txt
;;; ERROR: 1
modulez
funcz
(;; STDERR ;;;
out/test/parse/bad-crlf.txt:2:1: error: unexpected token "modulez", expected a module field or a command.
modulez
^^^^^^^
out/test/parse/bad-crlf.txt:3:1: error: unexpected token funcz, expected EOF.
funcz
^^^^^
;;; STDERR ;;)
